--- a/app/templates/components/post-item.hbs
+++ b/app/templates/components/post-item.hbs
@@ -6,62 +6,77 @@
                 </div>
                 <div class="col-md-9 col-sm-9 col-lg-9">
                 	<div class="row">
-
-	                    <div class="title h5 col-md-8 col-sm-8 col-lg-8"> 
-							{{#link-to 'profile' item.postCreatorId}}<b>{{item.createdByName}}</b>{{/link-to}}
-	                        <!--<a href="javascript:void(0);"><b>{{item.createdByName}}</b></a>-->
-	                       {{#if item.isPrivatePost}}
-						   posted in <b> {{#link-to 'group.posts' item.groupId tagName="a" class="text-muted cp"}}{{item.groupName}}{{/link-to}}</b>.
-						   {{/if}}
+	                    <div class="title h5 col-md-8 col-sm-8 col-lg-8">
+            							{{#link-to 'profile' item.postCreatorId}}<b>{{item.createdByName}}</b>{{/link-to}}
+            	                        <!--<a href="javascript:void(0);"><b>{{item.createdByName}}</b></a>-->
+            	                       {{#if item.isPrivatePost}}
+            						   posted in <b> {{#link-to 'group.posts' item.groupId tagName="a" class="text-muted cp"}}{{item.groupName}}{{/link-to}}</b>.
+            						   {{/if}}
 	                    </div>
-	                   <div class="title h5 col-md-3 col-sm-3 col-lg-3 pull-right text-muted time"> {{item.createdDisplayTime}}</div>
-                   </div>
-                   <div class="row">
-		                 <footer class="comment__footer col-md-5 col-sm-5 col-lg-5"><menu class="comment-footer__menu">
-								{{#if canEdit}}
-								<li class="reply {{unless item.isEditing 'show' 'hide'}}" {{action "editPost"}} data-role="reply-link"><a href="javascript:void(0);"
-									data-action="reply"> <span class="text">Edit</span></a></li>
-									<li class="reply {{if item.isEditing 'show' 'hide'}}" {{action "cancelEditing"}} data-role="reply-link"><a href="javascript:void(0);"
-									data-action="reply"> <span class="text">Cancel Editing</span></a></li>
-								<li class="bullet" aria-hidden="true">•</li>
-								<li class="reply {{if item.isEditing 'show' 'hide'}}" disabled={{if item.isSaving true}} data-role="reply-link"  {{action 'attachFilesClick'}}  ><a href="javascript:void(0);"
-									data-action="reply"> <span class="text">Attach Files</span></a>
-									 <span class="{{if item.isUploading 'inlinedisplay' 'nodisplay' }}"><img src="/img/loading.gif" /></span>
-									 </li>
-								{{/if}}
-								{{#if canDelete}}
-									<li class="reply {{unless item.isEditing 'show' 'hide'}}" data-role="reply-link" {{action "deletePost"}}><a href="javascript:void(0);"
-									data-action="reply"> <span class="text">Delete</span></a></li>
-								{{/if}}
-								 <input accept="image/*" multiple class="file-upload" onchange={{action "uploadFile"}} type="file" style="width: 0px; height: 0px; overflow: hidden;"  >
-							</menu>
-						</footer>
-					</div>
+	                    <div class="title h5 col-md-3 col-sm-3 col-lg-3 pull-right text-muted time"> {{item.createdDisplayTime}}</div>
+                  </div>
+                  {{#if canDelete}}
+                  <div class="row">
+		                 <footer class="comment__footer col-md-5 col-sm-5 col-lg-5">
+                       <menu class="comment-footer__menu">
+                          {{#if canEdit}}
+           								<li class="reply {{unless item.isEditing 'show' 'hide'}}" {{action "editPost"}} data-role="reply-link">
+                             <button class="btn btn-default">
+                               <i class="fa fa-pencil text-primary" style="width: 12px;" data-toggle="tooltip" title="Edit Task"></i>
+                             </button>
+                          </li>
 
-					<div class="row">
-					  	<div class="col-md-8 col-sm-8 col-lg-8">
-			                <div class="{{unless item.isEditing 'show' 'hide'}}">{{{item.comment}}}</div>
-			                <div class="{{if item.isEditing 'show' 'hide'}}">
-								{{post-comment-box  className="post-description edit-post" save='updatePost' esc-key='cancelEditing'  value=item.comment autoCompleteList=myList disabled=item.isSaving}}
-								{{input type="text" class="col-md-8 col-sm-8 col-lg-8 form-control" value=item.newTag placeholder="Tags"}}
-							</div>
-			                <div class="col-sm-12" class="{{if item.files.length 'show' 'hide' }} attachment-view" style="">
-						     {{post-item-files-list-preview item=item  }}
-<!-- 							 <ol class="file-list" style="padding-left:0px">
-						        {{#each item.files as |file|}}
-						        <li class="pos-rel" style="margin: 1px;height: 25px">
-						        {{post-item-file-preview item=file isEditing=item.isEditing removeFile="removeFile" }}
-						        </li>
-						        {{/each}}
-						        </ol> -->
-			       			</div>
-			                <div class="stats {{unless item.isEditing 'show' 'hide'}}">
-			                    <a href="javascript:void(0);" class="btn btn-default stat-item" disabled={{disableReactButton}} {{action "reactToPost"}}>
-			                        <i class="fa fa-thumbs-up icon"></i>{{item.numberOfReactions}}
-			                    </a>
-			           	 	</div>
-			       	 	</div>
-					</div>
+                          <li class="reply {{if item.isEditing 'show' 'hide'}}" {{action "cancelEditing"}} data-role="reply-link">
+                            <button class="btn btn-default">
+                              <span class="text text-danger" style="">Cancel</span>
+                            </button>
+                          </li>
+
+        								  <li class="reply {{if item.isEditing 'show' 'hide'}}" disabled={{if item.isSaving true}} data-role="reply-link"  {{action 'attachFilesClick'}}  >
+                              <button class="btn btn-default">
+        									        <span class="text text-primary">Attach Files</span>
+                              </button>
+        									    <span class="{{if item.isUploading 'inlinedisplay' 'nodisplay' }}"><img src="/img/loading.gif" /></span>
+        									 </li>
+           								{{/if}}
+           								{{#if canDelete}}
+           								  <li class="reply {{unless item.isEditing 'show' 'hide'}}"  data-role="reply-link" {{action "deletePost"}}>
+                               <button class="btn btn-default">
+                                 <i class="fa fa-trash text-danger" style="width: 12px;" data-toggle="tooltip" title="Delete Post"></i>
+                               </button>
+                             </li>
+           								{{/if}}
+
+  								        <input accept="image/*" multiple class="file-upload" onchange={{action "uploadFile"}} type="file" style="width: 0px; height: 0px; overflow: hidden;"  >
+        							</menu>
+        						</footer>
+                    <br>
+        					</div>
+	                {{/if}}
+        					<div class="row">
+        					  	<div class="col-md-8 col-sm-8 col-lg-8">
+        			            <div class="{{unless item.isEditing 'show' 'hide'}}">{{{item.comment}}}</div>
+        			            <div class="{{if item.isEditing 'show' 'hide'}}">
+            								{{post-comment-box  className="post-description edit-post" save='updatePost' esc-key='cancelEditing'  value=item.comment autoCompleteList=myList disabled=item.isSaving}}
+            								{{input type="text" class="col-md-8 col-sm-8 col-lg-8 form-control" value=item.newTag placeholder="Tags"}}
+            							</div>
+        			            <div class="col-sm-12" class="{{if item.files.length 'show' 'hide' }} attachment-view" style="">
+            						     {{post-item-files-list-preview item=item  }}
+            <!-- 							 <ol class="file-list" style="padding-left:0px">
+            						        {{#each item.files as |file|}}
+            						        <li class="pos-rel" style="margin: 1px;height: 25px">
+            						        {{post-item-file-preview item=file isEditing=item.isEditing removeFile="removeFile" }}
+            						        </li>
+            						        {{/each}}
+            						        </ol> -->
+        			       			</div>
+        			            <div class="stats {{unless item.isEditing 'show' 'hide'}}">
+        	                    <a href="javascript:void(0);" class="btn btn-default stat-item" disabled={{disableReactButton}} {{action "reactToPost"}}>
+        	                        <i class="fa fa-thumbs-up icon"></i>{{item.numberOfReactions}}
+        	                    </a>
+        			           	</div>
+        			       	</div>
+        					</div>
 
 					<h4 class="{{unless item.isEditing 'show' 'hide'}} row post-tags">
 						{{#each item.tags as |tag|}}
@@ -84,4 +99,4 @@
          </div>
 
      </div>
-    </div>
+</div>
