--- a/app/templates/components/task-item.hbs
+++ b/app/templates/components/task-item.hbs
@@ -6,56 +6,74 @@
                 </div>
                 <div class="col-md-9 col-sm-9 col-lg-9">
                 	<div class="row">
-	                    <div class="title h5 col-md-8 col-sm-8 col-lg-8"> 
+	                    <div class="title h5 col-md-8 col-sm-8 col-lg-8">
 	                        <a href="javascript:void(0);"><b>{{item.createdByName}}</b></a>
 	                       posted in <b> {{#link-to 'group.posts' item.groupId tagName="a" class="text-muted cp"}}{{item.groupName}}{{/link-to}}</b>.
 	                    </div>
 	                   <div class="title h5 col-md-3 col-sm-3 col-lg-3 pull-right text-muted time"> {{item.createdDisplayTime}}</div>
                    </div>
+                   {{#if canDelete}}
                    <div class="row">
 		                 <footer class="comment__footer col-md-5 col-sm-5 col-lg-5"><menu class="comment-footer__menu">
-								{{#if canEdit}}
-								<li class="reply " {{action "downloadSubmissions"}} data-role="reply-link"><a href="javascript:void(0);"
-									data-action="reply"> <span class="text">Download Submissions</span></a></li>
-							<li class="bullet " aria-hidden="true">•</li>
-								<li class="reply " {{action "editClicked"}} data-role="reply-link"><a href="javascript:void(0);"
-									data-action="reply"> <span class="text">Edit</span></a></li>
-								
-								{{/if}}
-								{{#if canDelete}}
-								<li class="bullet" aria-hidden="true">•</li>
-									<li class="reply " data-role="reply-link" {{action "deletePost"}}><a href="javascript:void(0);"
-									data-action="reply"> <span class="text">Delete</span></a></li>
-								{{/if}}
-								 <input accept="image/*" multiple class="file-upload" onchange={{action "uploadFile"}} type="file" style="width: 0px; height: 0px; overflow: hidden;"  >
-							</menu>
-						</footer>
-					</div>
-					<div class="row">
-					  	<div class="col-md-12 col-sm-12 col-lg-12"> 
-					  	    <div class=""><span class="task-title">{{{item.title}}}</span> <small class="pull-right {{if item.deadlineDisplayTime 'show' 'hide'}}">Deadline : {{item.deadlineDisplayTime}}</small></div>
-			                <div class="">{{{item.comment}}}</div>
-			                <div class="col-sm-12" class="{{if item.files.length 'show' 'hide' }} attachment-view" style="">
-								 {{post-item-files-list-preview item=item  }} 
-			       			</div>
-			                <div   class="stats ">
-			                     {{task-submission-form  className=""   save='saveTaskSubmission' cancelClicked='cancelTaskSubmission' task=item   }}
-			           	 	</div>
-			       	 	</div>
-					</div>
+        								{{#if canEdit}}
+        								<li class="reply " {{action "downloadSubmissions"}} data-role="reply-link">
+                            <button class="btn btn-default">
+                              <i class="fa fa-download text-primary" style="width: 12px;" data-toggle="tooltip" title="Download Submissions"></i>
+                            </button>
+                        </li>
+
+        								<li class="reply " {{action "editClicked"}} data-role="reply-link">
+                          <button class="btn btn-default">
+                            <i class="fa fa-pencil text-primary" style="width: 12px;" data-toggle="tooltip" title="Edit Task"></i>
+                          </button>
+                        </li>
+
+        								{{/if}}
+        								{{#if canDelete}}
+        								  <li class="reply " data-role="reply-link" {{action "deletePost"}}>
+                            <button class="btn btn-default">
+                              <i class="fa fa-trash text-danger" style="width: 12px;" data-toggle="tooltip" title="Delete Task"></i>
+                            </button>
+                          </li>
+        								{{/if}}
+        								 <input accept="image/*" multiple class="file-upload" onchange={{action "uploadFile"}} type="file" style="width: 0px; height: 0px; overflow: hidden;"  >
+        							</menu>
+        						</footer>
+        					</div>
+                  {{/if}}
+                  <div style="padding: 10px 0 10px 0">
+                    <span class="label label-primary" style="font-size: 12px">
+                      Total Submissions : {{{item.noOfSubmissions}}}
+                    </span>
+                  </div>
+        					<div class="row">
+        					  	<div class="col-md-12 col-sm-12 col-lg-12">
+        					  	    <div class="">
+                            <span class="task-title">{{{item.title}}}</span>
+                            <div class="{{if item.deadlineDisplayTime 'show' 'hide'}}" style="font-weight: bold">Deadline : {{item.deadlineDisplayTime}}</div>
+                          </div>
+        			            <div class="">{{{item.comment}}}</div>
+        			            <div class="col-sm-12" class="{{if item.files.length 'show' 'hide' }} attachment-view" style="">
+        								      {{post-item-files-list-preview item=item  }}
+        			       			</div>
+    			                <div  class="stats ">
+    			                    {{task-submission-form  className="" save='saveTaskSubmission' cancelClicked='cancelTaskSubmission' task=item}}
+      			           	 	</div>
+        			       	 	</div>
+        					</div>
                 </div>
-         </div> 
+            </div>
 
        <div class="post-footer ">
-              <div class="input-group contenteditable-input-group" > 
+              <div class="input-group contenteditable-input-group" >
                     {{post-comment-box schedule=item className="" placeholder="Add a comment"  save='saveComment'  recipientList=recipientList value=postComment autoCompleteList=myList disabled=isSaving}}
                 </div>
-                <ul class="comments-list" style="padding-left: 1%;">                
+                <ul class="comments-list" style="padding-left: 1%;">
                 {{#each item.comments as |comment|}}
               {{post-item-comment item=comment update="updateComment" deleteComment="deleteComment" group=group}}
                 {{/each}}
                 </ul>
-         </div> 
-        
-     </div> 
+         </div>
+
+     </div>
     </div>
