--- a/app/templates/components/task-submission-form.hbs
+++ b/app/templates/components/task-submission-form.hbs
@@ -13,7 +13,7 @@
             </ol>
 			  </div>
         <div class="form-group">
-            <div class="col-sm-10">
+            <div class="col-sm-10" style="padding-left: 0px">
                 <span class="{{if task.showLoading 'inlinedisplay' 'nodisplay' }}"><img src="/img/loading.gif" /></span>
                 <button type="button" class="btn btn-primary" {{action 'saveTaskSubmission' }} disabled={{unless files.length true}}>Submit</button>
                 <button type="button"   {{action 'showFileUpload'}} class="btn btn-primary"  disabled={{if task.showLoading true}}>Attach Files</button>
@@ -23,9 +23,8 @@
         </div>
     </div>
 </div>
-{{else if task.isSubmitted}}
-    <div class="text-info"> You have submitted this task with following files.</div>
-    <br>
+{{else if task.showResubmissionDiv}}
+    <div class="text-info" style="padding-bottom: 5px; padding-top: 5px;"> You have submitted this task with following files.</div>
     <div class="col-sm-12">
         <ol >
             {{#each task.submissions as |submission|}}
@@ -51,10 +50,10 @@
             </ol>
 			  </div>
         <div class="form-group">
-            <div class="col-sm-10">
+            <div class="col-sm-10" style="padding-left: 0px">
                 <span class="{{if task.showLoading 'inlinedisplay' 'nodisplay' }}"><img src="/img/loading.gif" /></span>
-                <button type="button" class="btn btn-primary" {{action 'resubmitTask' }} disabled={{unless files.length true}}>Save</button>
-                <button type="button"   {{action 'showFileUpload'}} class="btn btn-primary"  disabled={{if task.showLoading true}}>Resubmit Files</button>
+                <button type="button" class="btn btn-primary" {{action 'resubmitTask' }} disabled={{unless files.length true}}>Submit</button>
+                <button type="button"   {{action 'showFileUpload'}} class="btn btn-primary"  disabled={{if task.showLoading true}}>Attach Files</button>
                 <button type="button" class="btn btn-danger" {{action 'cancelTaskSubmission' item}}>Cancel</button>
                 <input  multiple class="file-upload-task" onchange={{action "uploadFile"}} type="file" style="width: 0px; height: 0px; overflow: hidden;"  >
             </div>
@@ -62,5 +61,20 @@
     </div>
 
 {{else }}
+    {{#if task.showSubmissionDiv}}
+        <div class="text-info"> You have submitted this task with following files.</div>
+        <br>
+        <div class="col-sm-12">
+            <ol >
+                {{#each task.submissions as |submission|}}
+                    {{#each submission.files as |file|}}
+                    <li>
+                      {{file.name}}&nbsp;({{file.size}})
+                    </li>
+                    {{/each}}
+                {{/each}}
+            </ol>
+        </div>
+    {{/if}}
     <div class="text-info"> Deadline has been passed.</div>
 {{/if}}
