Delete  Join request loading bug resolved

--- a/app/templates/group/view.hbs
+++ b/app/templates/group/view.hbs
@@ -20,7 +20,7 @@
       {{#if model.isAdmin}}
           <a href="#" data-toggle="modal" {{action 'showAddMemberModal' model}}>
             <button class="btn btn-default">
-              <i class="fa fa-plus text-primary" style="width: 15px; margin: 5px "></i> Show
+              <i class="fa fa-plus text-primary" style="width: 15px; margin: 5px "></i> Members
             </button>
           </a>
       {{/if}}
