--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -29,9 +29,22 @@
                     <!-- /.search form -->
                     <!-- sidebar menu: : style can be found in sidebar.less -->
                     <ul class="sidebar-menu">
-   		        <!--        {{#nav-link-to 'dashboard'  tagName="li"}}
-                             <i class="fa fa-dashboard"></i><span>Dashboard</span>
-                        {{/nav-link-to}} -->
+                        <li class="treeview">
+                          <a href="#">
+                            {{#nav-link-to 'home'  tagName="li"}}
+                                  <i class="fa fa-home" style="width: 15px"></i><span>Home</span>
+                             {{/nav-link-to}}
+                          </a>
+                        </li>
+
+                        <li class="treeview">
+                          <a href="#">
+                            {{#nav-link-to 'dashboard'  tagName="li"}}
+                                  <i class="fa fa-dashboard" style="width: 18px"></i><span>Dashboard</span>
+                             {{/nav-link-to}}
+                          </a>
+                        </li>
+
                         <li class="treeview">
                            <a href="javascript:void(0);">
                               <i class="fa fa-group" style="width: 15px"></i>
