--- a/app/templates/profile.hbs
+++ b/app/templates/profile.hbs
@@ -90,6 +90,9 @@
     <div class="panel panel-primary panel-sections personal-info">
         <div class="panel-heading">
             <h2>Institute Information</h2>
+            {{#if model.haveEditAccess}}
+                <button type="submit" class="btn btn-default" {{action 'addInstituteBtnClick' }}  disabled={{if isSaving true}}>Add</button>
+            {{/if}}
         </div>
         <div class="panel-body">
             <div class="panel-section">
@@ -97,20 +100,17 @@
                 <!-- Add Institute-->
                 <div class="form-group">
                     <label class="col-sm-2 control-label">Institutes</label>
-                    {{#if model.haveEditAccess}}
+
                     <div class="col-sm-10">
-                      <button type="submit" class="btn btn-default" {{action 'addInstituteBtnClick' }}  disabled={{if isSaving true}}>Add</button>
-                    </div>
-                    {{/if}}
-                    <div class="col-sm-10 col-sm-offset-2">
-                        {{#each model.institutes as |institute|}}
-                            <div >
-                              {{#nav-link-to 'institute.public' institute.id tagName="a"}}{{institute.name}}{{/nav-link-to}}, Position :
-                      {{#each institute.positions as |position|}}
+
+                      {{#each model.institutes as |institute|}}
+                          <div >
+                            {{#nav-link-to 'institute.public' institute.id tagName="a"}}{{institute.name}}{{/nav-link-to}}, Position :
+                            {{#each institute.positions as |position|}}
                                 <span class="file-tag blue" > {{position}}</span>
-                        {{/each}}
-                      </div>
-                  {{/each}}
+                            {{/each}}
+                          </div>
+                      {{/each}}
                     </div>
                 </div>
 
@@ -124,23 +124,32 @@
                     <form role="form">
                         <div class="box-body">
                             <div class="form-group">
-            			        <label class="col-sm-2 control-label">Unique Id</label>
-            			        <div class="col-sm-10">
-            			          {{input type="text" value=instituteMember.uniqueId class="form-control" placeholder="Unique Id"}}
-            			        </div>
-            			    </div>
+                  			        <label class="col-sm-2 control-label">Unique Id</label>
+                  			        <div class="col-sm-10">
+                                  {{#if model.haveEditAccess}}
+                  			             {{input type="text" value=instituteMember.uniqueId class="form-control" placeholder="Unique Id"}}
+                                  {{else}}
+                                      {{instituteMember.uniqueId}}
+                                  {{/if}}
+                  			        </div>
+                  			    </div>
 
-            			    <div class="form-group">
-            			        <label class="col-sm-2 control-label">Roll Number</label>
-            			        <div class="col-sm-10">
-            			          {{input type="text" value=instituteMember.rollNo class="form-control" placeholder="Roll Number"}}
-            			        </div>
-            			    </div>
+                  			    <div class="form-group">
+                  			        <label class="col-sm-2 control-label">Roll Number</label>
+                  			        <div class="col-sm-10">
+                                  {{#if model.haveEditAccess}}
+                  			             {{input type="text" value=instituteMember.rollNo class="form-control" placeholder="Roll Number"}}
+                                  {{else}}
+                                      {{instituteMember.rollNo}}
+                                  {{/if}}
+                  			        </div>
+                  			    </div>
                         </div><!-- /.box-body -->
-
-                        <div class="box-footer">
-                            <button {{action 'saveInstitutesInformation' instituteMember}} class="btn btn-primary">Save Info.</button>
-                        </div>
+                        {{#if model.haveEditAccess}}
+                            <div class="box-footer">
+                                <button {{action 'saveInstitutesInformation' instituteMember}} class="btn btn-primary">Save Info.</button>
+                            </div>
+                        {{/if}}
                     </form>
                 </div>
                 {{/each}}
@@ -194,7 +203,7 @@
 
     {{#if model.haveEditAccess}}
     {{modal/profile/certificate-modal appUserId=model.userId update="saveCertificate"}}
-    
+
     {{#each model.certificates as |certificate index|}}
         {{modal/profile/certificate-modal appUserId=model.userId item=certificate update="updateCertificate"}}
         {{modal/core/delete-modal item=index modalId=(concat "delete-certificate-" certificate.certificateId) delete="deleteCertificate"}}
@@ -228,7 +237,7 @@
 
     {{#if model.haveEditAccess}}
     {{modal/profile/personal-info-modal item=model update="updatePersonalInfo"}}
-    
+
     <div class="panel panel-primary panel-sections personal-info">
         <div class="panel-heading">
             <h2>Email Notifications</h2>
